tests/invalid/typeclass_mode_1.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module typeclass_mode_1.
:- interface.

:- typeclass c(T) where [
    mode p(in) is det
].

